--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,43 @@
 {
 	display: none;
 }
+
+.container
+{
+	margin: 0 auto;
+	max-width: 1140px;
+}
+
+#mobile
+{
+	display: flex;
+	flex-direction: column;
+}
+
+#box1
+{
+	background-color: pink;
+	color: #fff;
+	text-align: center;
+	height: 300px;
+	margin: 10px;
+}
+
+#box2
+{
+	background-color: red;
+	color: #fff;
+	text-align: center;
+	height: 300px;
+	margin: 10px;
+}
+
+#box3
+{
+	display: none;
+}
+
+#box4
+{
+	display: none;
+}
