--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,54 @@
 {
 	display: none;
 }
+
+
+@media screen and (min-width: 641px) {
+
+	.mobile
+	{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+	}
+
+	.box1
+	{
+		background-color: blue;
+		color: #fff;
+		text-align: center;
+		flex-grow: 1;
+		height: 600px;
+	}
+
+	.box2
+	{
+		background-color: purple;
+		color: #fff;
+		text-align: center;
+		flex-grow: 1;
+		height: 600px;
+	}
+
+	.box3
+	{
+		display: block;
+		background-color: grey;
+		color: #fff;
+		text-align: center;
+		flex-grow: 1;
+		margin: 10px;
+		height: 600px;
+	}
+
+	.box4
+	{
+		display: block;
+		background-color: brown;
+		color: #fff;
+		text-align: center;
+		flex-grow: 1;
+		margin: 10px;
+		height: 600px;
+	}
+}
